HelloUltraviolet/Source/Fixtures/RejectedSource/Coverage.uv
//! Coverage checks for rejected-source fixture metadata.

public procedure expectedRejectedSourceFixtureCount() -> usize {
    return 279usize
}

public procedure rejectedSourceFixtureCount() -> usize {
    return sourceTextRejectedSourceFixtureCount() +
        parsingRejectedSourceFixtureCount() +
        namesRejectedSourceFixtureCount() +
        proceduresRejectedSourceFixtureCount() +
        statementsRejectedSourceFixtureCount() +
        expressionsRejectedSourceFixtureCount() +
        patternsRejectedSourceFixtureCount() +
        polymorphismRejectedSourceFixtureCount() +
        ffiRejectedSourceFixtureCount() +
        keysRejectedSourceFixtureCount()
}

public procedure validatedRejectedSourceFixtureCount() -> usize {
    return validatedSourceTextRejectedSourceFixtureCount() +
        validatedParsingRejectedSourceFixtureCount() +
        validatedNamesRejectedSourceFixtureCount() +
        validatedProceduresRejectedSourceFixtureCount() +
        validatedStatementsRejectedSourceFixtureCount() +
        validatedExpressionsRejectedSourceFixtureCount() +
        validatedPatternsRejectedSourceFixtureCount() +
        validatedPolymorphismRejectedSourceFixtureCount() +
        validatedFFIRejectedSourceFixtureCount() +
        validatedKeysRejectedSourceFixtureCount()
}

public procedure rejectedSourceFixturesAreIndexed() -> bool {
    return rejectedSourceFixtureCount() == expectedRejectedSourceFixtureCount() &&
        validatedRejectedSourceFixtureCount() == expectedRejectedSourceFixtureCount()
}
